--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,36 +1,41 @@
-# Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: Mindjoy
+repo: status-internal
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
-  - name: IPv6 test
-    url: forwardemail.net
-    port: 80
-    check: "tcp-ping"
-    ipv6: true
+  - name: Staging
+    url: $TEST_URL
+  - name: Staging API
+    url: $TEST_API_URL/up
+    icon: https://raw.githubusercontent.com/Mindjoy/status/master/assets/rails-favicon.png
+  - name: Critical Queue Status
+    url: $WORKER_HEALTH_URL/critical/status
+    icon: https://raw.githubusercontent.com/Mindjoy/status/master/assets/sidekiq-favicon.ico
+    __dangerous__body_degraded: "UHOH"
+  - name: Critical Queue Latency
+    url: $WORKER_HEALTH_URL/critical/latency
+    icon: https://raw.githubusercontent.com/Mindjoy/status/master/assets/sidekiq-favicon.ico
+    __dangerous__body_degraded: "UHOH"
+  - name: Default Queue Status
+    url: $WORKER_HEALTH_URL/default/status
+    icon: https://raw.githubusercontent.com/Mindjoy/status/master/assets/sidekiq-favicon.ico
+    __dangerous__body_degraded: "UHOH"
+  - name: Default Queue Latency
+    url: $WORKER_HEALTH_URL/default/latency
+    icon: https://raw.githubusercontent.com/Mindjoy/status/master/assets/sidekiq-favicon.ico
+    __dangerous__body_degraded: "UHOH"
+
+assignees:
+  - diraulo
+  - EthanMarrs
 
 status-website:
-  # Add your custom domain name, or remove the `cname` line if you don't have a domain
-  # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
-  # baseUrl: /your-repo-name
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  baseUrl: /status-internal
+  logoUrl: https://raw.githubusercontent.com/Mindjoy/status/master/assets/logo.svg
+  favicon: https://raw.githubusercontent.com/Mindjoy/status/master/assets/favicon.ico
+  name: Status
+  introMessage: Welcome to Mindjoy's Internal status page .
   navbar:
     - title: Status
       href: /
-    - title: GitHub
-      href: https://github.com/$OWNER/$REPO
-
-# Upptime also supports notifications, assigning issues, and more
-# See https://upptime.js.org/docs/configuration
+    - title: Mindjoy
+      href: https://mindjoy.com/
